# cachy

./: CHANGELOG.md  README.md  cachy.jsonl  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: test.yaml
cachy/: __init__.py  _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
